[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/enemy/Level1/slimeBlue.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/enemy/Level1/slimeBlue_blue.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/enemy/Level1/slimeBlue_squashed.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/music/Level1/pepSound2.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "crawl",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "squeshed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.0268, 13.4462 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.4932, 3.73696 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27.9144, 11.8064 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 51
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.346909, 3.56728 )
shape = SubResource( 2 )

[node name="FloorChecker" type="RayCast2D" parent="."]
position = Vector2( 0, 1.25 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -0.749146, -13.6881 )
shape = SubResource( 3 )

[node name="Hit" type="AudioStreamPlayer" parent="top_checker"]
stream = ExtResource( 5 )
volume_db = 13.938

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -0.29729, 3.66525 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
